[project]
name = "luma_test"
version = "0.1.0"
description = "Luma Test"
authors = [
    {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
]
dependencies = [
    "cli-lite>=0.4.0",
    "rich>=13.0.1",
    "importlib-metadata>=3.6; python_version < \"3.10\"",
    "tomli>=1.1.0; python_version < \"3.11\"",
    "tomlkit<1,>=0.11.1",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project.scripts]
luma = "luma.__main__:main"
[tool]
[tool.pdm]
